# paradigm-governance

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  action.yml  governance.toml  pyproject.toml
.claude/skills/: governance-config.md  governance.md
.github/workflows/: ci.yml  governance-fix.yml  governance.yml  tests.yml
code_governance/: __main__.py  ci_report.py  cli.py  config.py  dep_graph.py  engine.py  extractor.py  rules.py  schemas.py  test_targeting.py
code_governance/advisor/: __init__.py  context.py  prompts.py  providers.py  schemas.py
code_governance/languages/: __init__.py  python.py  tsconfig.py  typescript.py
code_governance/viewer/: index.html
paradigm_governance/: __main__.py  ai_config_generator.py  ci_report.py  cli.py  config.py  dep_graph.py  engine.py  extractor.py  rules.py  schemas.py
paradigm_governance/advisor/: __init__.py  context.py  prompts.py  providers.py  schemas.py
paradigm_governance/exporters/: __init__.py
paradigm_governance/languages/: __init__.py  csharp.py  debug.py  python.py  typescript.py
tests/: conftest.py  test_advisor.py  test_auto_detect.py  test_cli.py  test_cli_typescript.py  test_config.py  test_dep_graph.py  test_dep_graph_ts.py  test_e2e.py  test_engine.py  test_extractor.py  test_rules.py  test_test_targeting.py  test_tsconfig.py  test_typescript_extractor.py  test_typescript_resolve.py
tests/fixtures/golden_project/api/: routes.py
tests/fixtures/golden_project/configs/: all-rules.toml  cannot-depend.toml  cycles-only.toml  layers-only.toml  metrics.toml  no-rules.toml  transitive.toml  with-exclusions.toml
tests/fixtures/golden_project/domain/: logic.py  models.py
tests/fixtures/golden_project/infra/: db.py
tests/fixtures/golden_project/legacy/: old_code.py
tests/fixtures/golden_project/service/: handler.py
tests/fixtures/golden_project/utils/: helpers.py
tests/fixtures/nested_project/analysis/: top.py
tests/fixtures/nx_workspace/: tsconfig.base.json
tests/fixtures/sample_project/: governance.toml
tests/fixtures/sample_project/api/: routes.py
tests/fixtures/sample_project/core/: models.py  service.py
tests/fixtures/sample_project/db/: repository.py
tests/fixtures/sample_ts_project/: governance.toml  tsconfig.json
tests/fixtures/transitive_project/: governance.toml
virality/: competitor-analysis.md
(+25 files in other folders)
