[project]
name = "paradigm-governance"
version = "0.1.0"
description = "AST-based governance engine for enforcing module boundaries and architecture rules"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "ast-grep-py>=0.28",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]

[project.scripts]
governance-ast = "paradigm_governance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
