[project]
name = "code-governance"
version = "0.2.0"
description = "AST-based governance engine for enforcing module boundaries and architecture rules in Python codebases"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "pydantic>=2.0",
    "ast-grep-py>=0.28.1",
    "httpx>=0.25",
    "tomli>=2.0; python_version < '3.11'",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/useparadigm/code-governance"
Repository = "https://github.com/useparadigm/code-governance"
Issues = "https://github.com/useparadigm/code-governance/issues"

[project.scripts]
governance-ast = "code_governance.cli:main"
governance-ci-report = "code_governance.ci_report:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
